# zenos-setup

./: .buildconfig  Makefile  README.md  System Capture from 2026-04-17 16:07:19.syscap  com.negzero.zenos.setup.json.bak  flake.nix  meson.build  result  result-oobe  result-setup  zenos-oobe  zenos-setup  zenos-setup.py
data/: com.negzero.zenos.setup.desktop.in  com.negzero.zenos.setup.metainfo.xml.in  com.negzero.zenos.setup.service.in  meson.build
data/icons/: meson.build
install_root/share/dbus-1/services/: com.negzero.zenos.setup.service
install_root/share/glib-2.0/schemas/: com.negzero.zenos.setup.gschema.xml  gschemas.compiled
install_root/share/icons/hicolor/: icon-theme.cache
install_root/share/metainfo/: com.negzero.zenos.setup.metainfo.xml
install_root/share/zenos-setup/: zenos-setup.gresource
install_root/share/zenos-setup/zenos_setup/: main.py  window.py
po/: POTFILES.in  meson.build
src/: builder.py  main.py  meson.build  oobe.py  runner.py  state.py  style.css  window.py  window.ui  zenos-setup.gresource.xml  zenos-setup.in
src/views/: combined.py
src/views/computer_name/: layout.ui  logic.py
src/views/desktop_picker/: layout.ui  logic.py
src/views/disks/: dialog-disk-confirm.ui  dialog-disk.ui  layout.ui  logic.py  widget-disk.ui  widget-partition-row.ui  widget-partition.ui
src/views/extra_software/: apps.json  layout.ui  logic.py  popup.ui
src/views/installer_welcome/: layout.ui  logic.py
src/views/internet/: advanced-dialogs.ui  layout.ui  logic.py  proxy-settings-dialog.ui  wireless-row.ui
src/views/keyboard/: layout.ui  logic.py
src/views/language/: layout.ui  logic.py
src/views/online_config/: layout.ui  logic.py
src/views/oobe_welcome/: layout.ui  logic.py
src/views/path_choice/: layout.ui  logic.py
src/views/progress/: layout.ui  logic.py
src/views/reboot/: layout.ui  logic.py
src/views/recovery_mode/: layout.ui  logic.py
src/views/theme/: layout.ui  logic.py
src/views/timezone/: layout.ui  logic.py
src/views/user_setup/: layout.ui  logic.py
